# piscine_rust

module00/ex00/: hello.rs
module00/ex01/: main.rs  min.rs
module00/ex02/: collatz.rs  print_bytes.rs  yes.rs
module00/ex03/: fizzbuzz.rs
module00/ex04/: Cargo.toml
module00/ex04/src/: main.rs  other.rs  overflow.rs
module00/ex05/src/: main.rs
