[package]
name = "module00-ex04"
version = "0.1.0"
edition = "2021"
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
authors = ["Carlos Orellana <corellan@student.hive.fi>"]
publish = false
default-run = "module00-ex04"

[[bin]]
name = "other"
path = "src/other.rs"

[[bin]]
name = "test-overflow"
path = "src/overflow.rs"

[dependencies]

[profile.release]
strip = "symbols"

[profile.no_overflows]
inherits = "dev"
overflow-checks = false